chore: output esm module

--- a/packages/coincheck-client/package.json
+++ b/packages/coincheck-client/package.json
@@ -9,6 +9,7 @@
   "homepage": "",
   "license": "MIT",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "files": [
     "dist"
   ],
