--- a/packages/coincheck-client/package.json
+++ b/packages/coincheck-client/package.json
@@ -31,11 +31,15 @@
     "jest": "^26.6.3",
     "rollup": "^2.34.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-typescript2": "^0.29.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
+    "tsc-alias": "^1.1.5",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.2"
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.1.2",
+    "typescript-transform-paths": "^2.1.0"
   },
   "dependencies": {
     "got": "^11.8.0"
