--- a/packages/coincheck-client/package.json
+++ b/packages/coincheck-client/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
+  "sideEffects": false,
   "files": [
     "dist"
   ],
