--- a/package.json
+++ b/package.json
@@ -1,27 +1,94 @@
 {
   "name": "coincheck-client",
-  "description": "Coincheck API wrapper for Node.js",
-  "license": "MIT",
-  "private": true,
+  "description": "Coincheck API client for Node.js",
+  "version": "0.1.0-alpha.4",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs.js",
+      "import": "./dist/index.es.js"
+    }
+  },
   "scripts": {
-    "postinstall": "husky install"
+    "commit": "cz",
+    "prepare": "husky install",
+    "lint:eslint": "eslint --ignore-path .gitignore .",
+    "lint:tsc": "tsc --noEmit",
+    "lint:yamllint": "yamllint **/*.yaml --ignore=node_modules/**/*",
+    "lint": "run-p lint:*",
+    "test:unit": "jest",
+    "test": "run-p test:*",
+    "build:scripts": "node -r esbuild-register scripts/build.ts",
+    "build:types": "tsc --emitDeclarationOnly && tsc-alias",
+    "build": "run-p build:*",
+    "release": "semantic-release"
+  },
+  "sideEffects": false,
+  "license": "MIT",
+  "dependencies": {
+    "node-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@commitlint/config-lerna-scopes": "^11.0.0",
-    "commitizen": "^4.2.2",
-    "husky": "^5.0.4",
-    "lerna": "^3.22.1",
-    "pinst": "^2.1.1",
-    "prettier": "^2.2.1"
+    "@commitlint/cli": "^14.1.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@swc/core": "^1.2.106",
+    "@swc/jest": "^0.2.5",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "commitizen": "^4.2.4",
+    "commitlint": "^14.1.0",
+    "commitlint-config-gitmoji": "^2.2.5",
+    "cryptocurrency-types": "^1.0.0-beta.2",
+    "cz-emoji": "^1.3.1",
+    "esbuild": "^0.13.12",
+    "esbuild-register": "^3.0.0",
+    "eslint": "^8.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-tsdoc": "^0.2.14",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.6",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.4.1",
+    "semantic-release": "^18.0.0",
+    "semantic-release-gitmoji": "^1.4.2",
+    "tsc-alias": "^1.4.0",
+    "tsc-files": "^1.1.2",
+    "typescript": "^4.4.4",
+    "yaml-lint": "^1.2.4"
   },
-  "workspaces": [
-    "packages/**"
+  "author": {
+    "name": "TomokiMiyauci",
+    "email": "contact@miyauchi.dev",
+    "url": "https://miyauchi.dev/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TomokiMiyauci/coincheck-client.git"
+  },
+  "files": [
+    "dist"
   ],
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+  "homepage": "https://github.com/TomokiMiyauci/coincheck-client#readme",
+  "bugs": "https://github.com/TomokiMiyauci/coincheck-client/issues",
+  "funding": {
+    "type": "patreon",
+    "url": "https://www.patreon.com/tomoki_miyauci"
+  },
+  "keywords": [
+    "coincheck"
+  ],
+  "lint-staged": {
+    "*.{ts,tsx,js}": [
+      "tsc-files --noEmit",
+      "eslint --cache --fix"
+    ],
+    "*.{json,md,mdx}": "prettier -w",
+    "*.{yaml,yml}": "yamllint"
   }
 }
