--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "license": "MIT",
   "dependencies": {
     "cryptocurrency-types": "^1.0.0-beta.4",
-    "node-fetch": "^2.6.6"
+    "node-fetch": "^2.6.6",
+    "utilitypes": "^1.0.0-beta.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^14.1.0",
@@ -58,6 +59,8 @@
     "got": "^11.8.2",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
+    "jest-extended": "^1.1.0",
+    "jest-extended-plus": "^1.0.0-beta.6",
     "lint-staged": "^11.2.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
