--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "sideEffects": false,
   "license": "MIT",
   "dependencies": {
+    "cross-fetch": "^3.1.4",
     "cryptocurrency-types": "^1.0.0-beta.11",
-    "node-fetch": "^2.6.6",
     "utilitypes": "^1.0.0-beta.4"
   },
   "devDependencies": {
@@ -43,7 +43,6 @@
     "@swc/jest": "^0.2.5",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
-    "@types/node-fetch": "2",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "commitizen": "^4.2.4",
