--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,9 @@
   "lint": {
     "rules": {
       "exclude": ["ban-types"]
+    },
+    "files": {
+      "exclude": ["node_modules"]
     }
   }
 }
